--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;700;900&display=swap');
 
 :root {
   --primary-color: #047aed;
@@ -82,6 +82,11 @@ pre {
   justify-content: space-between;
 }
 
+.navbar .logo {
+  font-weight: 900;
+  font-family: 'Lato', sans-serif;
+}
+
 /* Showcase */
 .showcase {
   height: 400px;
@@ -92,6 +97,8 @@ pre {
 
 .showcase h1 {
   font-size: 40px;
+  font-weight: 700;
+  font-family: 'Lato', sans-serif;
 }
 
 .showcase p {
