--- a/css/styles.css
+++ b/css/styles.css
@@ -268,6 +268,11 @@ grid-column: 1 / span 2;
 /* Footer */
 .footer .social a {
   margin:0 10px;
+  color: var(--light-color);
+}
+
+.footer li a {
+  color: var(--light-color);
 }
 
 /* Animations */
