updated dns and site name

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;700;900&display=swap');
 
 :root {
-  --primary-color: #07ce54;
-  --secondary-color: #04412b;
-  --dark-color: #063024;
+  --primary-color: #103cec;
+  --secondary-color: #3b53b3;
+  --dark-color: #061348;
   --light-color: #f4f4f4;
   --success-color: #5cb85c;
   --error-color: #f91c14;
